--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
 name = "jsonnlp"
-version = "0.2.0"
+version = "0.0.1"
 authors = ["Damir Cavar <damir@semiring.com>"]
 edition = "2018"
+description = "A short description of my package"
+readme = "README.md"
+repository = "https://github.com/SemiringInc/RustJSONNLP"
+license = "Apache-2.0"
+license-file = "LICENSE.txt"
+keywords = ["nlp", "json", "ai"]
+categories = ["api-bindings", "data-structures"]
+publish = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,6 +19,6 @@ serde = { version = "^1.0", features = ["derive"] }
 serde_derive = "^1.0"
 serde_json = { version = "^1.0", default-features = false, features = ["alloc"] }
 restson = "^0.7"
-reqwest = { version = "^0.11", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
-configparser = "^2.0.0"
+#reqwest = { version = "^0.11", features = ["json"] }
+#tokio = { version = "1", features = ["full"] }
+#configparser = "^2.0.0"
