Updated with defaults

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "an implementation of the JSON-NLP data structure"
 readme = "README.md"
 repository = "https://github.com/SemiringInc/RustJSONNLP"
 license = "Apache-2.0"
-license-file = "LICENSE.txt"
+#license-file = "LICENSE.txt"
 keywords = ["nlp", "json", "ai"]
 categories = ["api-bindings", "data-structures"]
 publish = true
